--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,69 +1,54 @@
-name: Windows Build
-on:
-  push:
-jobs:
-  build:
-    name: Windows Build
-    runs-on: windows-latest
-    steps:
-      - name: Pulling the new commit
-        uses: actions/checkout@v4.1.6
-      - name: Setting up Haxe
-        uses: krdlab/setup-haxe@v1.5.1
-        with:
-          haxe-version: 4.3.6
-      - name: Restore existing build cache for faster compilation
-        uses: actions/cache@v3
-        with:
-          # not caching the bin folder to prevent asset duplication and stuff like that
-          key: cache-build-windows
-          path: |
-            .haxelib/
-            export/release/windows/haxe/
-            export/release/windows/obj/
-          restore-keys: |
-            cache-build-windows
-      - name: Installing/Updating libraries
-        run: |
-          haxelib --global install hxpkg
-          haxelib --global run hxpkg install --force
-        shell: cmd        
-      - name: Building the game
-        run: |
-          haxelib run lime build windows
+# This is a basic workflow to help you get started with Actions
 
-      - name: Uploading artifact (entire build)
-        uses: actions/upload-artifact@v4.3.3
+name: Windows Build CI
+
+# Controls when the workflow will run
+on: [push, pull_request]
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: windows-latest
+    
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      - uses: krdlab/setup-haxe@v1
         with:
-          name: Kade Engine Community
+          haxe-version: 4.1.5
+      # Runs a set of commands using the runners shell
+      - name: script run line haha
+        run: |
+          cinst haxe --version 4.1.5 -y
+          RefreshEnv
+          mkdir "%HAXELIB_ROOT%"
+          haxelib setup "%HAXELIB_ROOT%"
+          haxelib install lime 7.9.0
+          RefreshEnv
+          haxelib install openfl
+          haxelib install flixel
+          haxelib run lime setup flixel
+          haxelib run lime setup
+          haxelib install flixel-tools
+          haxelib install flixel-addons
+          haxelib install flixel-ui
+          haxelib install hscript
+          haxelib install flixel-addons
+          haxelib git faxe https://github.com/uhrobots/faxe
+          haxelib git polymod https://github.com/MasterEric/polymod.git
+          haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
+          haxelib git extension-webm https://github.com/KadeDev/extension-webm
+          haxelib run lime rebuild extension-webm windows
+          haxelib git linc_luajit https://github.com/nebulazorua/linc_luajit.git
+          haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit
+          haxelib install actuate 
+          haxelib list
+          haxelib run lime build windows
+          
+      - uses: actions/upload-artifact@v2
+        with:
+          name: Windows Build
           path: export/release/windows/bin
-      - name: Clearing already existing cache
-        uses: actions/github-script@v7.0.1
-        with:
-          script: |
-            const caches = await github.rest.actions.getActionsCacheList({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-            })
-            for (const cache of caches.data.actions_caches) {
-              if (cache.key == "cache-build-windows") {
-                console.log('Clearing ' + cache.key + '...')
-                await github.rest.actions.deleteActionsCacheById({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  cache_id: cache.id,
-                })
-                console.log("Cache cleared.")
-              }
-            }
-      - name: Uploading new cache
-        uses: actions/cache@v3
-        with:
-          # caching again since for some reason it doesnt work with the first post cache shit
-          key: cache-build-windows
-          path: |
-            .haxelib/
-            export/release/windows/haxe/
-            export/release/windows/obj/
-          restore-keys: |
-            cache-build-windows
