--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -16,39 +16,83 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - uses: krdlab/setup-haxe@v1
+      - uses: krdlab/setup-haxe@master
         with:
-          haxe-version: 4.1.5
+          haxe-version: 4.2.5
+
+      - name: Get last Action build
+        uses: actions/cache@v3
+        with:
+          # not caching the bin folder to prevent asset duplication and stuff like that
+          key: cache-build-windows
+          path: |
+            .haxelib/
+            export/release/windows/haxe/
+            export/release/windows/obj/
+          restore-keys: |
+            cache-build-windows
       # Runs a set of commands using the runners shell
       - name: script run line haha
         run: |
-          cinst haxe --version 4.1.5 -y
-          RefreshEnv
           mkdir "%HAXELIB_ROOT%"
           haxelib setup "%HAXELIB_ROOT%"
-          haxelib install lime 7.9.0
+          haxelib install lime 
           RefreshEnv
           haxelib install openfl
           haxelib install flixel
-          haxelib run lime setup flixel
-          haxelib run lime setup
+          haxelib install hxcpp-debug-server 1.2.4 
           haxelib install flixel-tools
-          haxelib install flixel-addons
+          haxelib install flixel-addons 3.2.0
           haxelib install flixel-ui
           haxelib install hscript
-          haxelib install flixel-addons
+          haxelib git hxCodec https://github.com/polybiusproxy/hxCodec
           haxelib git faxe https://github.com/uhrobots/faxe
-          haxelib git polymod https://github.com/MasterEric/polymod.git
+          haxelib install polymod
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
-          haxelib git extension-webm https://github.com/KadeDev/extension-webm
-          haxelib run lime rebuild extension-webm windows
           haxelib git linc_luajit https://github.com/nebulazorua/linc_luajit.git
           haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit
+          haxelib git extension-webm https://github.com/KadeDev/extension-webm
+          haxelib run lime rebuild extension-webm windows
           haxelib install actuate 
           haxelib list
+
+      - name: Compile
+        run: |
           haxelib run lime build windows
-          
+
       - uses: actions/upload-artifact@v2
         with:
           name: Windows Build
           path: export/release/windows/bin
+
+      - name: Clear current Action Cache
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const caches = await github.rest.actions.getActionsCacheList({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+            })
+            for (const cache of caches.data.actions_caches) {
+              if (cache.key == "cache-build-windows") {
+                console.log('Clearing ' + cache.key + '...')
+                await github.rest.actions.deleteActionsCacheById({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  cache_id: cache.id,
+                })
+                console.log("Cache cleared.")
+              }
+            }
+
+      - name: Caching new Action
+        uses: actions/cache@v3
+        with:
+          # caching again since for some reason it doesnt work with the first post cache shit
+          key: cache-build-windows
+          path: |
+            .haxelib/
+            export/release/windows/haxe/
+            export/release/windows/obj/
+          restore-keys: |
+            cache-build-windows
