--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -37,7 +37,7 @@ jobs:
           mkdir "%HAXELIB_ROOT%"
           haxelib setup "%HAXELIB_ROOT%"
           haxelib install lime 
-          RefreshEnv
+          Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
           haxelib install lime 
           haxelib install openfl
           haxelib install flixel
